--- a/MasterPage.master
+++ b/MasterPage.master
@@ -2,233 +2,158 @@
 
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="utf-8">
-		<title>Adidas</title>
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		
-		<!-- Metatag -->
-		<meta property="og:title" content="Humble Shop" />
-		<meta property="og:type" content="website" />
-		<meta property="og:description" content="Minimalist  Responsive eCommerce Template" />
-		<meta property="og:url" content="http://humbleshop.pagodabox.com/" />
-		<meta property="og:image" content="http://humbleshop.pagodabox.com/img/hightreslogo.png" />
-		
-		<link rel="stylesheet" href="css/bootstrap.min.css" />
-		<link rel="stylesheet" href="css/font.css" />
-		<link rel="stylesheet" href="css/style.css" />
-		
-		<!-- Favicon -->
-		<link rel="icon" href="img/logo.png">
-		
-		<!-- =========== -->
-		<!-- Google Font -->
-		<!-- =========== -->
-				
-		<script type="text/javascript">
+<head>
+    <meta charset="utf-8">
+    <title>Adidas</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-		    // Add Google Font name here
+    <link rel="stylesheet" href="css/bootstrap.min.css" />
+    <link rel="stylesheet" href="css/font.css" />
+    <link rel="stylesheet" href="css/style.css" />
 
-		    WebFontConfig = { google: { families: ['Bangers', 'Lato'] } };
-		    (function () {
-		        var wf = document.createElement('script');
-		        wf.src = ('https:' == document.location.protocol ? 'https' : 'http') +
-                '://ajax.googleapis.com/ajax/libs/webfont/1/webfont.js';
-		        wf.type = 'text/javascript';
-		        wf.async = 'true';
-		        var s = document.getElementsByTagName('script')[0];
-		        s.parentNode.insertBefore(wf, s);
-		    })();
+    <!-- Favicon -->
+    <link rel="icon" href="img/logo.png">
 
-		</script>
-		
-		<style type="text/css">
-		
-			/* Add Google Font name here */
+    <!-- =========== -->
+    <!-- Google Font -->
+    <!-- =========== -->
 
-			.wf-active {font-family: 'Lato',serif; font-size: 13px;}
-			.wf-active .logo {font-family: 'Bangers', serif;}
-			
-		</style>
-		
-		<!--[if lt IE 9]>
+    <script type="text/javascript">
+
+        // Add Google Font name here
+
+        WebFontConfig = { google: { families: ['Bangers', 'Lato'] } };
+        (function () {
+            var wf = document.createElement('script');
+            wf.src = ('https:' == document.location.protocol ? 'https' : 'http') +
+            '://ajax.googleapis.com/ajax/libs/webfont/1/webfont.js';
+            wf.type = 'text/javascript';
+            wf.async = 'true';
+            var s = document.getElementsByTagName('script')[0];
+            s.parentNode.insertBefore(wf, s);
+        })();
+
+    </script>
+
+    <style type="text/css">
+        /* Add Google Font name here */
+
+        .wf-active {
+            font-family: 'Lato',serif;
+            font-size: 13px;
+        }
+
+            .wf-active .logo {
+                font-family: 'Bangers', serif;
+            }
+    </style>
+
+    <!--[if lt IE 9]>
 			<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
 		<![endif]-->
-		<!--[if IE 7]>
+    <!--[if IE 7]>
 			<link rel="stylesheet" href="css/ie7.css" />
 		<![endif]-->
-		<asp:ContentPlaceHolder id="head" runat="server">
+    <asp:ContentPlaceHolder ID="head" runat="server">
     </asp:ContentPlaceHolder>
-	</head>
+</head>
 
-	<body class="wf-active">	
-		
-		<!-- =========== -->
-		<!-- Top section -->
-		<!-- =========== -->
-		
-		<div class="container welcome">
-			<div class="row-fluid">
-				<div class="pull-left greet">
-					Welcome, <a href="login.html">login here</a>
-				</div>
-				<div class="pull-right cart tright">
-					
-					
-					
-					<!-- Bubble Cart Item -->
-					<div class="cartbubble">
-				
-						<div class="arrow-box">
-							
-							<!-- Item 1 -->
-							<div class="clearfix">
-								<a href="#">Sample Tshirt Stripes...</a> <span class="theme pull-right">$55</span>
-							</div>
-							
-							<!-- Item 2 -->
-							<div class="clearfix">
-								<a href="#">Sample Dress in cart</a> <span class="theme pull-right">$73</span>
-							</div>
-							
-							<!-- Item 3 -->
-							<div class="clearfix">
-								<a href="#">Sample Socks in cart</a> <span class="theme pull-right">$11</span>
-							</div>
-							<hr />
-							<!-- Total -->
-							<div class="clearfix">
-								TOTAL <span class="theme pull-right">$139</span>
-							</div>
-							<hr />
-							<div class="clearfix">
-								<a href="javascript:void(0)" id="closeit">Close</a>
-								<a href="checkout.html" class="btn theme btn-mini pull-right">Checkout</a>
-							</div>
-						</div>
-						
-					</div>
-				</div>
-			</div>	
-		</div>
+<body class="wf-active">
 
-		<!-- ================ -->
-		<!-- Branding section -->
-		<!-- ================ -->
-		
-		<div class="container head">
-			<div class="row">
-				<div class="span12 clearfix">
-					<div class="top row">
-						
-						<div class="span8 logo text" style="display:none"><a href="category.aspx">ShoeShop</a></div>
-						<div class="span8 logo image"><a href="Category.aspx"><img src="img/logo.png" alt="" /></a></div>
-						
-						<div class="cart span4">
-							<form action="#" class="topsearch">
-								<input type="search" class="top-search" placeholder="Search"/>
-								<button type="submit"><i class="icon-search"></i></button>
-							</form>
-						</div>
-						
-					</div>	
-				</div>
-			</div>
-		</div>
-		
-		<!-- ================ -->
-		<!-- Main Nav section -->
-		<!-- ================ -->
-		
-		<div class="container">
-			<div class="row">		
-				<div class="span12">
-					<nav class="horizontal-nav full-width">
-						<ul class="nav" id="nav">
-							
-							<li>
-								<a href="Category.aspx">Product</a>
-								<ul class="nav">
-									<li class="dropdown">
-                                    
-                                        <asp:SqlDataSource ID="SqlDSMainCategory" runat="server" ConnectionString="<%$ ConnectionStrings:CategoryConnection %>" SelectCommand="SELECT * FROM [Category] Where Parent = 0"></asp:SqlDataSource>
-                                        <asp:Repeater id="rpDesktop" runat="server" DataSourceID="SqlDSMainCategory">
-	                                        <ItemTemplate>
-                                                <li><a href="Category.aspx?MainCategoryID=<%# Container.DataItem("CategoryID")%>&CategoryName=<%# Container.DataItem("CategoryName")%>"><%# Container.DataItem("CategoryName")%></a></li>
-	                                        </ItemTemplate>
-                                        </asp:Repeater>
-                                        </li>
-                                    </ul>
-                               
-										
-								</ul>
-						
-					</nav>
-				</div>
-			</div>
-		</div>
-		
-		<!-- =========== -->
-		<!-- Main Slider -->
-		<!-- =========== -->
+    <!-- =========== -->
+    <!-- Top section -->
+    <!-- =========== -->
 
-		<div class="container">
-			
-			<asp:ContentPlaceHolder id="ContentPlaceHolder1" runat="server">
-        
+    <div class="container welcome">
+        <div class="row-fluid">
+            <div class="pull-right cart tright">
+
+                <!-- Cart  -->
+                <div class="counter">
+                    <a href="viewcart.aspx">View Cart</a>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- ================ -->
+    <!-- Branding section -->
+    <!-- ================ -->
+
+    <div class="container head">
+        <div class="row">
+            <div class="span12 clearfix">
+                <div class="top row">
+
+                    <div class="span8 logo image">
+                        <a href="Category.aspx">
+                            <img src="img/logo.png" alt="" /></a>
+                    </div>
+
+                    <div class="cart span4">
+                        <form action="#" class="topsearch">
+                            <input type="search" class="top-search" placeholder="Search" />
+                            <button type="submit"><i class="icon-search"></i></button>
+                        </form>
+                    </div>
+
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- ================ -->
+    <!-- Main Nav section -->
+    <!-- ================ -->
+   
+    <div class="container">
+        <div class="row">
+            <div class="span12">
+                <nav class="horizontal-nav full-width">
+                    <ul class="nav" id="nav">
+                        <asp:SqlDataSource ID="SqlDSMainCategory" runat="server" ConnectionString="<%$ ConnectionStrings:CategoryConnection %>" SelectCommand="SELECT * FROM [Category] Where Parent = 0"></asp:SqlDataSource>
+                        <asp:Repeater ID="rpDesktop" runat="server" DataSourceID="SqlDSMainCategory">
+                            <ItemTemplate>
+                                <li><a href="Category.aspx?MainCategoryID=<%# Container.DataItem("CategoryID")%>&CategoryName=<%# Container.DataItem("CategoryName")%>"><%# Container.DataItem("CategoryName")%></a></li>
+                            </ItemTemplate>
+                        </asp:Repeater>
+                    </ul>
+                </nav>
+            </div>
+        </div>
+    </div>
+
+    <!-- =========== -->
+    <!-- Main Slider -->
+    <!-- =========== -->
+
+    <div class="container">
+        <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
         </asp:ContentPlaceHolder>
-			
-		</div>
-		
-		
 
-		<!-- ============== -->
-		<!-- Footer section -->
-		<!-- ============== -->
-		
-		<footer>
-			<div class="container">
-				
-				
-				<section class="row-fluid doubleline">
-					<div class="span6">
-		
-						<div class="payment amex"></div>
-						<div class="payment mastercard"></div>
-						<div class="payment visa"></div>
-						<div class="payment paypal"></div>
-						<!-- 
-						<div class="payment cirrus"></div>
-						<div class="payment delta"></div>
-						<div class="payment direct-debit"></div>
-						<div class="payment discover"></div>
-						<div class="payment ebay"></div>
-						<div class="payment googlecheckout"></div>
-						<div class="payment maestro"></div>
-						<div class="payment moneybookers"></div>
-						<div class="payment sagepay"></div>
-						<div class="payment solo"></div>
-						<div class="payment switch"></div>
-						<div class="payment visaelectron"></div>
-						<div class="payment 2checkout"></div>
-						<div class="payment westernunion"></div> 
-						-->
-					</div>
-					<div class="span6 currency">
-						<a href="#" class="active">USD</a> <a href="#">GBP</a> <a href="#">MYR</a> <a href="#">AUD</a>
-					</div>
-				</section>
-		
-				
-			</div>
-		</footer>
-	
-	<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
-	<script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?sensor=false"></script>
-	<script type="text/javascript" src="js/jquery.tweet.js"></script>
-	<script type="text/javascript" src="js/bootstrap.min.js"></script>
-	<script type="text/javascript" src="js/shop.js"></script>
-	<script type="text/javascript" src="js/script.js"></script>
-	
-	</body>
+    </div>
+
+
+
+
+    <!-- ============== -->
+    <!-- Footer section -->
+    <!-- ============== -->
+
+    <footer>
+        <div class="container">
+            <section class="row-fluid social">
+                <div class="pull-left">&copy; 2015 Adidas</div>
+            </section>
+        </div>
+    </footer>
+
+    <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.8.2/jquery.min.js"></script>
+    <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?sensor=false"></script>
+    <script type="text/javascript" src="js/jquery.tweet.js"></script>
+    <script type="text/javascript" src="js/bootstrap.min.js"></script>
+    <script type="text/javascript" src="js/shop.js"></script>
+    <script type="text/javascript" src="js/script.js"></script>
+
+</body>
 </html>
